<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Notificacion"
    android:orientation="vertical"
    android:padding="5dp" >

   <Button 
       	android:id="@+id/btnEnviarNoti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notificacion"></Button>
   
      <Button 
       	android:id="@+id/btnEnviarNotiDescarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notificacion"></Button>
   
    <Button android:id="@+id/btnAlerta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alerta"/>
    
     <Button android:id="@+id/btnSeleccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccion"/>
     
      <Button android:id="@+id/btnConfirmacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmacion"/>
      
      <Button android:id="@+id/btnPersonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal"/>

</LinearLayout>
